--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.25.1",
+    "react-slot-counter": "^3.0.1",
     "swiper": "^11.1.9"
   },
   "devDependencies": {
