--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "react": "^18.3.1",
     "react-animate-on-scroll": "^2.1.9",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-slot-counter": "^3.0.1",
     "swiper": "^11.1.9"
@@ -28,11 +30,11 @@
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-react-refresh": "^0.4.9",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
-    "vite": "^5.3.4"
+    "vite": "^5.3.5"
   }
 }
