--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-lottie": "^1.2.4",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
