--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-animate-on-scroll": "^2.1.9",
     "react-countup": "^6.5.3",
