--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.3",
     "firebase": "^10.12.5",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
