--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-animate-on-scroll": "^2.1.9",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-lottie": "^1.2.4",
     "react-paginate": "^8.2.0",
