--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.3",
     "firebase": "^10.12.5",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-animate-on-scroll": "^2.1.9",
