--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-slot-counter": "^3.0.1",
     "rive-react": "^4.13.5",
     "sweetalert2": "^11.12.4",
-    "swiper": "^11.1.9"
+    "swiper": "^11.1.9",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "1.6.1",
@@ -59,6 +60,8 @@
     "prop-types": "15.8.1",
     "storybook": "^8.2.8",
     "tailwindcss": "^3.4.7",
-    "vite": "^5.3.5"
+    "vite": "^5.3.5",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   }
 }
